--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -23,7 +23,7 @@
       <property name="maximumSize">
        <size>
         <width>230</width>
-        <height>16777215</height>
+        <height>12341234</height>
        </size>
       </property>
       <property name="layoutDirection">
@@ -174,6 +174,8 @@
     </item>
     <item>
      <widget class="GLWidget" name="widget" native="true">
+      <zorder>groupBox</zorder>
+      <zorder>groupBox</zorder>
       <zorder>groupBox</zorder>
       <zorder>groupBox</zorder>
       <zorder>groupBox</zorder>
